增加一些方法